diesel_compile_tests/tests/fail/update_requires_column_be_from_same_table.stderr
error[E0271]: type mismatch resolving `<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<posts::columns::title, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>> as AsChangeset>::Target == users::table`
  --> tests/fail/update_requires_column_be_from_same_table.rs:22:33
   |
22 |     let command = update(users).set(posts::title.eq("Hello"));
   |                                 ^^^ expected struct `users::table`, found struct `posts::table`
   |
note: required by a bound in `UpdateStatement::<T, U>::set`
  --> $DIESEL/src/query_builder/update_statement/mod.rs
   |
   |         V: changeset::AsChangeset<Target = T>,
   |                                   ^^^^^^^^^^ required by this bound in `UpdateStatement::<T, U>::set`

error[E0271]: type mismatch resolving `<users::table as AppearsInFromClause<posts::table>>::Count == diesel::query_source::Once`
  --> tests/fail/update_requires_column_be_from_same_table.rs:23:37
   |
23 |     let command = update(users).set(name.eq(posts::title));
   |                                 --- ^^^^^^^^^^^^^^^^^^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |                                 |
   |                                 required by a bound introduced by this call
   |
note: required because of the requirements on the impl of `AppearsOnTable<users::table>` for `posts::columns::title`
  --> tests/fail/update_requires_column_be_from_same_table.rs:15:9
   |
15 |         title -> VarChar,
   |         ^^^^^
   = note: required because of the requirements on the impl of `AsChangeset` for `diesel::expression::operators::Eq<users::columns::name, posts::columns::title>`

error[E0277]: the trait bound `users::table: TableNotEqual<posts::table>` is not satisfied
  --> tests/fail/update_requires_column_be_from_same_table.rs:23:37
   |
23 |     let command = update(users).set(name.eq(posts::title));
   |                                 --- ^^^^^^^^^^^^^^^^^^^^^ the trait `TableNotEqual<posts::table>` is not implemented for `users::table`
   |                                 |
   |                                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `TableNotEqual<T>`:
             <Only<pg::metadata_lookup::pg_namespace::table> as TableNotEqual<pg::metadata_lookup::pg_type::table>>
             <Only<pg::metadata_lookup::pg_type::table> as TableNotEqual<pg::metadata_lookup::pg_namespace::table>>
             <pg::metadata_lookup::pg_namespace::table as TableNotEqual<Only<pg::metadata_lookup::pg_type::table>>>
             <pg::metadata_lookup::pg_namespace::table as TableNotEqual<pg::metadata_lookup::pg_type::table>>
             <pg::metadata_lookup::pg_type::table as TableNotEqual<Only<pg::metadata_lookup::pg_namespace::table>>>
             <pg::metadata_lookup::pg_type::table as TableNotEqual<pg::metadata_lookup::pg_namespace::table>>
   = note: required because of the requirements on the impl of `AppearsInFromClause<posts::table>` for `users::table`
note: required because of the requirements on the impl of `AppearsOnTable<users::table>` for `posts::columns::title`
  --> tests/fail/update_requires_column_be_from_same_table.rs:15:9
   |
15 |         title -> VarChar,
   |         ^^^^^
   = note: required because of the requirements on the impl of `AsChangeset` for `diesel::expression::operators::Eq<users::columns::name, posts::columns::title>`
